# app-yntcloud

./: .gitignore  .gitmodules  HOWTO.md  LICENSE  README.md  environment.yml  install.py  makefile  package-lock.json  pyproject.toml
environ/ynt-trading-prod/: environ.toml
package/lib-x17-cloudmeta/: package.toml
package/lib-x17-log/: package.toml
platform/ynt-cloud/: platform.toml
service/lake/: Makefile  Pulumi.yaml  Pulumi.ynt-cloud-prod-lake.yaml  README.md  __main__.py  service.toml
service/lake/backend/: component.py
service/lake/backend/storage/: __init__.py  infrastructure.py
service/network/: Makefile  Pulumi.yaml  __main__.py  service.toml
service/network/backend/: __init__.py  component.py
service/network/backend/networking/: __init__.py  infrastructure.py
service/server-finconnect/: Makefile  Pulumi.yaml  __main__.py  service.toml
service/server-finconnect/backend/: component.py
service/server-finconnect/backend/core/: __init__.py  corebuild.py  infrastructure.py  layerbuild.py
service/server-finconnect/backend/core/functions/finconnect-run-batch/: handler.py  invoke.py
service/server-finconnect/backend/core/functions/finconnect-start-ecs-instance/: handler.py  invoke.py
service/server-finconnect/backend/core/functions/finconnect-stop-ecs-instance/: handler.py
service/server-finconnect/backend/instances/: __init__.py  infrastructure.py
service/server-finconnect/backend/instances/finconnect/: __init__.py  deployment.py  infrastructure.py
service/server-finconnect/backend/schedule/: __init__.py  infrastructure.py
service/server-finconnect/backend/server/: __init__.py  infrastructure.py
service/server-lakebuild/: Pulumi.yaml  service.toml
service/server-lakebuild/backend/: component.py
service/server-lakebuild/backend/core/: __init__.py
service/server-lakebuild/backend/core/functions/lakebuild-start-ecs-instance/: handler.py  invoke.py
service/server-lakebuild/backend/server/: __init__.py  infrastructure.py
(+1 files in other folders)
