[project]
name = "app-yntcloud"
version = "0.0.1"
description = "yntcloud environment for Onshore QTrading"
readme = "README.md"
authors = [
    { name = "Xing Xing", email = "x.xing.work@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"

dependencies = [
    "pulumi>=3.0.0",
    "pulumi-alicloud>=3.0.0",
    "aliyun-python-sdk-core",
    "lib-x17-cloudmeta>=0.0.1",
    "lib-x17-log>=0.0.1"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = false